--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,17 @@
 /* CSS Start */
 body {
-  margin: 50px;
-  padding: 65px;
-  width: 80%;
-  box-sizing: border-box;
+  /* margin: 10px 10px;
+  padding: 10px 10px;
+  /* width: 80%; */
+  /* box-sizing: border-box; */ 
 }
-h1{
+/* h1{
     color: aliceblue;
-}
+} */
 
 /* Map */
 #map {
     height: 500px;
+    width: 500px;
 }
  
