--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 /* CSS Start */
-/* body {
-  /* margin: 10px 10px;
+body {
+ margin: 10px 10px;
   padding: 10px 10px;
-  /* width: 80%; */
-  /* box-sizing: border-box; */ 
-/* } */ 
+ width: 80%; 
+  box-sizing: border-box; 
+ }  
 /* h1{
     color: aliceblue;
 } */
