--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /* CSS Start */
-body {
- margin: 10px 10px;
-  padding: 10px 10px;
- width: 80%; 
-  box-sizing: border-box; 
+ body {
+  margin: 50px;
+  padding: 65px;
+  width: 80%;
+  box-sizing: border-box;
  }  
 /* h1{
     color: aliceblue;
@@ -11,7 +11,7 @@ body {
 
 /* Map */
 #map {
-    height: 500px;
-    width: 500px;
+    height: 1000px;
+    width: 1000px;
 }
  
