--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,10 @@
 
 /* Map */
 #map {
-    height: 1000px;
-    width: 1000px;
+    height: 700px;
+    width: 700px;
+    padding: 10px;
 }
- 
+ #navbar {
+   padding: 30px;
+ }
