--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,14 @@ body {
   width: 80%;
 box-sizing: border-box; 
  } 
-/* h1{
+
+ /*#h1{
     color: aliceblue;
-} */
+}*/
 
 /* Map */
 #map {
-    height: 500px;
-    width: 500px;
+    height: 600px;
+    width: 600px;
 }
  
