--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,28 @@
 /* CSS Start */
 body {
-  margin: 50px;
-  padding: 65px;
+  margin: 10px;
+  padding: 10px;
   width: 80%;
 box-sizing: border-box; 
- } 
+ }
 
  /*#h1{
     color: aliceblue;
 }*/
 
+#footer {
+  height: 400px; 
+  width: 400px;
+}
+
+#mp1 {
+  height: 500px;
+  width: 500px;
+}
+
 /* Map */
 #map {
-    height: 600px;
-    width: 600px;
+    height: 350px;
+    width: 350px;
 }
  
