--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 10px;
   padding: 10px;
-  width: 80%;
+  width: 100%;
 box-sizing: border-box; 
  }
 
@@ -10,19 +10,20 @@ box-sizing: border-box;
     color: aliceblue;
 }*/
 
-#footer {
-  height: 400px; 
-  width: 400px;
-}
 
 #mp1 {
-  height: 500px;
-  width: 500px;
+  height: 800px;
+  width: 800px;
 }
 
 /* Map */
 #map {
-    height: 350px;
-    width: 350px;
+    height: 500px;
+    width: 500px;
 }
  
+/* Create four equal columns that floats next to each other 
+.burger {
+  float: left;
+  width: 100%;
+}*/
