--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,35 @@
 /* CSS Start */
 body {
-  margin: 10px;
+  margin: 30px;
   padding: 10px;
   width: 100%;
-box-sizing: border-box; 
- }
+  box-sizing: border-box;
+}
 
- /*#h1{
+/*#h1{
     color: aliceblue;
 }*/
 
+/* #mp1 {
+  width: 100%;
+  min-height: 50vh;
+} */
 
-#mp1 {
-  height: 800px;
-  width: 800px;
-}
+/* #mp2 {
+  width: 100%;
+  height: 100%;
+} */
 
 /* Map */
 #map {
-    height: 500px;
-    width: 500px;
+  height: 90%;
+  width: 100%;
+  min-height: 45vh;
 }
- 
+
+#mapparent {
+  min-height: 50vh;
+}
 /* Create four equal columns that floats next to each other 
 .burger {
   float: left;
